[package]
name = "rskv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvs-server"
path = "src/kvs_server.rs"

[[bin]]
name = "kvs-client"
path = "src/kvs_client.rs"

[dependencies]
prost = "0.12.3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = "0.10.2"
tower = "0.4.13"

[build-dependencies]
prost-build = "0.12.3"
tonic-build = "0.10.2"
